<?xml version="1.0"?>
<package format="2">
  <name>gazebo_closed_loop_hw_sim</name>
  <version>0.0.1</version>
  <description>
    Gazebo hardware interface which enables taking feedback from passive joints
    so that Closed loop structures can be simulated in URDF. Closed loop structure
    should be divided to the serial chains in URDF and in order to simulate in Gazebo 
    close chain shoud be prepared in the gazebo tags.
  </description>

  <maintainer email="aytackahveci93@gmail.com">Aytac Kahveci</maintainer>


  <license>BSD</license>


  <buildtool_depend>catkin</buildtool_depend>
  <build_depend>angles</build_depend>
  <build_depend>control_toolbox</build_depend>
  <build_depend>controller_manager</build_depend>
  <build_depend>gazebo_dev</build_depend>
  <build_depend>hardware_interface</build_depend>
  <build_depend>joint_limits_interface</build_depend>
  <build_depend>pluginlib</build_depend>
  <build_depend>roscpp</build_depend>
  <build_depend>std_msgs</build_depend>
  <build_depend>transmission_interface</build_depend>
  <build_depend>urdf</build_depend>
  <build_depend>gazebo_ros_control</build_depend>
  <build_export_depend>angles</build_export_depend>
  <build_export_depend>control_toolbox</build_export_depend>
  <build_export_depend>controller_manager</build_export_depend>
  <build_export_depend>gazebo_dev</build_export_depend>
  <build_export_depend>hardware_interface</build_export_depend>
  <build_export_depend>joint_limits_interface</build_export_depend>
  <build_export_depend>pluginlib</build_export_depend>
  <build_export_depend>roscpp</build_export_depend>
  <build_export_depend>std_msgs</build_export_depend>
  <build_export_depend>transmission_interface</build_export_depend>
  <build_export_depend>urdf</build_export_depend>
  <build_export_depend>gazebo_ros_control</build_export_depend>
  <exec_depend>angles</exec_depend>
  <exec_depend>control_toolbox</exec_depend>
  <exec_depend>controller_manager</exec_depend>
  <exec_depend>gazebo_dev</exec_depend>
  <exec_depend>hardware_interface</exec_depend>
  <exec_depend>joint_limits_interface</exec_depend>
  <exec_depend>pluginlib</exec_depend>
  <exec_depend>roscpp</exec_depend>
  <exec_depend>std_msgs</exec_depend>
  <exec_depend>transmission_interface</exec_depend>
  <exec_depend>urdf</exec_depend>
  <exec_depend>gazebo_ros_control</exec_depend>


  <!-- The export tag contains other, unspecified, tags -->
  <export>
    <gazebo_ros_control plugin="${prefix}/gazebo_closed_loop_hw_sim_plugins.xml"/>
  </export>
</package>
